--- a/src/styles/_components.scss
+++ b/src/styles/_components.scss
@@ -31,6 +31,11 @@
     color: var(--orange);
     svg { transform: translateX(-3px); }
   }
+
+  &:focus-visible {
+    outline: 2px solid var(--orange);
+    outline-offset: 3px;
+  }
 }
 
 @media screen and (max-width: 550px) {
